--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       <div class="card lead">
         <h2>Hola, <span id="name-slot">Emilia</span>…</h2>
         <div class="copy">Este test es <strong>solo para ti</strong>: respuestas cortitas → una vibra + un plan bonito. Yo, Martín, prometo hacerte feliz y pasar bonitos momentos.</div>
-        <div class="pill">🌌 Fondo estelar porque sí</div>
+        <div class="pill">🌌 Fondo estelar porque seré astrofísico :p</div>
       </div>
 
       <form class="card" id="quiz">
@@ -119,7 +119,6 @@
 
     <footer>
       <span class="copy">Hecho con cariño por <span id="myName">alguien con ganas de conocerte</span></span>
-      <span class="copy">Súbelo como <span class="kbd">index.html</span> a GitHub Pages</span>
     </footer>
   </div>
 
