--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
       document.getElementById('vibeTag').textContent = `${titleTag} ${title}`;
       document.getElementById('title').textContent = `Eres: ${title}`;
       document.getElementById('desc').textContent = tagline;
-      document.getElementById('flirt').innerHTML = `Okiii emiiii bonita, te enseñaré a encontrar Orión tarde o temprano. <br><strong>PERO</strong> tu eliges la playlist (tienes gustazos) y el plan <em>${plan}</em>. <br>demonos la oportunidad, vamos despacito y todo bien. <br><span class="copy">Recuerda mandarme lo que te salió jijiji</span>`;
+      document.getElementById('flirt').innerHTML = `Okiii Emiiii bonita, te enseñaré a encontrar Orión tarde o temprano. <br><strong>PERO</strong> tu eliges la playlist (tienes gustazos) y el plan <em>${plan}</em>. <br>demonos la oportunidad, vamos despacito y todo bien. <br><span class="copy">Recuerda mandarme lo que te salió jijiji</span>`;
 
       // Construir razones/justificación tipo test
       const reasons = [];
